--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -47,14 +47,25 @@ grestore
 %
 
 \usepackage{booktabs}
-\usepackage{amsmath}
+\usepackage{tabu,xcolor,colortbl}
+\usepackage{rotating}
+\usepackage{amsmath,array}    
 \usepackage[utf8]{inputenc} 
-\usepackage{graphicx}
-\usepackage{listings}
+\DeclareUnicodeCharacter{FB01}{fi} %Caracter especial
+\usepackage{graphicx} %Imagens
+\usepackage{listings} % Codes
+\usepackage{tabularx} % in the preamble
+\usepackage{mathtools} % Serve para as equacoes
+
+\newcommand{\head}[1]{\textnormal{\textbf{#1}}}
+
 \usepackage{color}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
+\definecolor{Gray}{gray}{0.93}
+\definecolor{DarkGray}{gray}{0.70}
+
 \lstset{frame=tb,
   language=c,
   aboveskip=3mm,
@@ -153,7 +164,6 @@ Vamos otimizar (K+W), com restrições em (K \textless 2) e (W-K \textless 1), o
 
 
 De acordo com [34] a arquitetura do vZ pode ser descrita na imagem XXX, inicialmente as formulas e os objetivos SMT sao reescritos para variaveis do tipo 0-1, posteriormente os objetivos sao convertidos para problemas MaxSAT, se houver muitos objetivos vZ invoca MaxSAT ou OptSMT. Para restricoes sob valores reais usando “Box”, vZ combina todas a aritmetica linear e faz chamada para OptSMT. Quando usamos “soft constrains” no modo “lexicographic” vZ invoca MaxSAT.
-
 \begin{figure}[ht]
 	\centering
   \includegraphics[width=0.49\textwidth, height=95px]{Image/vzArch.png} 
@@ -161,21 +171,44 @@ De acordo com [34] a arquitetura do vZ pode ser descrita na imagem XXX, inicialm
 	\label{fig2}
 \end{figure}
 
-
 Z3 is available for platforms like C, C ++, Java, .NET and Python, it is possible to download the Z3 with vZ in http://z3.codeplex.com. API in python was used to formulate the optimization problem on the vZ tool. The pseudo code below describes the steps to achieve desired results.
 
 \subsection{Bounded Model Checking with ESBMC}
-
-Model checking refers to algorithms for exploring the state space of a transition system to determine if it obeys a speciﬁcation of its intended behavior [3],[4]. These algorithms can perform exhaustive exploration in a highly automatic way and, thus, have attracted much interest in industry. However, model-checking has been held back by the state explosion problem, in which the number of states in a system grows exponentially in the number of system components [10]. Much research has been devoted to mitigate this problem.
+Model checking refers to algorithms for exploring the state space of a transition system to determine if it obeys a speciﬁcation of its intended behavior [3], [4]. These algorithms can perform exhaustive exploration in a highly automatic way and, thus, have attracted much interest in industry. However, model-checking has been held back by the state explosion problem, in which the number of states in a system grows exponentially in the number of system components [10]. Much research has been devoted to mitigate this problem.
 
 Among the recent techniques, there is one that combines model checking with satisﬁability solving. This technique, known as bounded model checking (BMC), does a very fast exploration of the state space, and for some types of problems, it offers large performance improvements over previous approaches, as shown in [10]. In particular, BMC based on Boolean Satisfiability (SAT) has been introduced as a complementary technique to binary decision diagrams for alleviating the state explosion problem. 
 
 The basic idea of BMC is to check the negation of a given property at a given depth: given a transition system $ M $, a property $ \phi $, and a bound $ K $, BMC unrolls the system  times and translates it into a verification condition (VC) $ \varphi $  such that $ \varphi $   is satisfiable if and only if $ \phi $ has a counterexample of depth $ K $ or less [10]. To cope with increasing software complexity, SMT solvers can be used as back-ends for solving the generated VCs, as shown in [11], [12], and [13]. 
 
 According to [14] and [15], SMT-based model checking can be used to verify the single- and multi-threaded software. In [16], ESBMC can also be used to model check C++ software based on SMT solvers. In [5] and [6] it was shown that it is possible to use ESBMC, as an optimization tool.
+
 There are two directives in C/C++ that can be used to guide a model checker to solve an optimization problem: ASSUME and ASSERT. The directive ASSUME is responsible for ensuring the compliance of constraints (software costs), and the directive ASSERT controls the halt condition or code violation (minimum hardware cost). Then, with some C/C++ code, it is possible to guide ESBMC to solve optimization problems.
 
+
+
 \subsection{Multi-core ESBMC with OpenMP}
+Nowadays, although the CPU used to perform tests usually has a modern multi-core architecture, with the ability to run several threads on different processing cores, ESBMC verification runs are still performed only in a single-core. For instance, if the processor has 8 processing cores available, only one is used for the verification and the others remain idle. There is a significant unused hardware resource during this process.
+
+Fig.1 shows the ESBMC architecture, which consists of the C/C++ parser, GOTO Program, GOTO Symex, and SMT solver [16]. In particular, ESBMC compiles the C/C++ code into equivalent GOTO-programs (i.e., control-flow graphs) using a gcc-compliant style. The GOTO-programs can then be processed by the symbolic execution engine, called GOTO Symex, where two recursive functions compute the constraints ($ C $) and properties ($ P $); finally it generates two sets of equations (i.e.,\:$ C \land \neg P $ ) which are checked by an SMT solver. 
+
+The main factor for ESBMC to use only a single-core relies on its back-end (i.e., SMT Solver). Currently, the SMT solvers supported by ESBMC are: Z3 [24], Boolector [25], MathSAT [26], CVC4 [27], and Yices [28]. Most of them do provide neither multi-threaded support nor a parallel version to solve the generated SMT equations.
+\begin{figure}[ht]
+	\centering
+  \includegraphics[scale=0.9]{Image/esbmc-arch-new.pdf} 
+	\caption{gestaucht}
+\end{figure}
+
+To optimize the CPU resources utilization without modifying the underlying SMT Solver, the Open Multi-Processing (OpenMP) library [23] is used in this present work as a front-end for ESBMC.
+
+OpenMP is a standard Application Programming Interface (API) for shared memory programming, which has been very successful for structural parallelism in applications. The API provides a directive-based programming approach to write parallel versions of C/C++ programs [33]. In OpenMP, the implementation is based on the fork-join model. The main thread executes the sequential parts of the program; if a parallel region is encountered, then it forks a team of worker threads. After the parallel region finishes (i.e., the API waits until all threads terminate), then the main procedure gets back to the single-threaded execution mode [7]. Fig. 2 shows our approach called “Multi-core ESBMC”.
+\begin{figure}[ht]
+	\centering
+  \includegraphics[scale=0.75]{Image/esbmc-parallel.pdf} 
+	\caption{gestaucht}
+\end{figure}
+
+Multi-core ESBMC obtains the problem specification represented by a C program, which is violated when the correct optimum value () parameter is reached; Multi-core ESBMC starts a parallel region with  different instances of ESBMC, based on the number of available processing cores. All these ESBMC instances run independently of each other, as shown in Fig. 2; note that there is no shared-memory (or message-passing) mechanism among the threads. In particular, different threads are managed by the OpenMP API, which is responsible for the thread lifecycle: start, running, and dead states, using different  values as condition. After executing  instances, if there is no code violation, then multi-core ESBMC starts  new instances again. During the parallel region execution, if a violation is found in any running thread, then it presents the counterexample with the violation condition and the verification time. If all threads of the batch processing are terminated, then multi-core ESBMC finishes its execution.
+
 \subsection{Multi-core ESBMC with OpenMP using Binary Search}
 The original parallelization was made by continuously forking the instances of the ESBMC until the first violation is find. 
 
@@ -246,13 +279,59 @@ The mathematical modeling was taken from [1], [2].
 The informal model can be described by five characteristics. First, there is only one software context, i.e., there is just one general-purpose processor, and there is only one hardware context. The components of the system must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the running time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, and energy consumption. Fourth, based on the premise that hardware is significantly faster than software, the running time of the components in hardware is considered as zero. Finally, if two components are mapped to the same context, then there is no overhead of communication between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this work. Hardware components do not need scheduling, because the running time is assumed to be zero. Because there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, where the focus is on bipartitioning [17].
 
 \subsection{Formal Model}
-...
+The inputs of the problem are: A directed simple graph $ G = (V,E) $, called the task graph of the system, is necessary. The vertices $ V = \{V_1,V_2,\dotso,V_n\} $ represent the nodes that are the components of the system that will be partitioned. The edges $ E $ represent communication between the components. Additionally, each node  $ V_i $ has a cost $ h(V_i) $ (or $ h_i $ of hardware (if implemented in hardware) and a cost $ s(s_i) $ (or $ s_i $ of software (if implemented in software). Finally, $ c(V_i,V_j) $ represents the communication cost between $ V_i $ and $ V_j $ if they are implemented in different contexts (hardware or software).
+
+Based on [1],  is called a hardware-software partition if it is a bipartition of $ V:P = (V_h, V_s) $ , where $ V_h \cup V_s = V $  and $ V_h \cap V_s = 0$  . The crossing $ E_p = \{(V_i,V_j):V_i \in V_s, V_j \in V_h \;or\; v_i \in V_h, v_j \in V_s $ edges are . The hardware cost of $ P $  is given by Eq. (2), and the software cost of $ P $ (i.e., software cost of the nodes and the communication cost) is given by Eq. (3):
+
+\begin{align}
+\ H_p &= \Sigma (v_i \;\in\; _Vh) H_i\\
+  S_p &= \Sigma (v_i \;\in\; _Vs) S_i + \Sigma (_(v_i,v_j) \in\; _Ep)\; C(V_i, V_j)
+\end{align}
+
+Three different optimization and decision problems can be defined. In this paper, the focus is on the case that $ S_0 $ is given, i.e., to find a $ P $ HW-SW partitioning so that $ S_p \leq S_0 $ and $ H_p $ is minimal (system with hard real-time constraints). So, based on Eq. (1) and Eq. (3) the optimization problem’s restrictions can be reformulated as: $ s(1-x) + c|E_x| \leq S_0 $, where $ x $ is the decision variable. Concerning the complexity of this problem, reference [1] demonstrates that it is NP-Hard.
 
 \section{Partitioning problem using ILP-based,Genetic Algorithms}
 \label{ILPGA}
 The ILP and GA were taken from [5] and [6]. Both use slack variables in order to be possible to represent the constraints and to use commercial tools. However, GA had improvements from the parameters of related studies in order to increase the solution accuracy without producing timeout. The tuning was performed by empirical tests and resulted in changing of three parameters, which are passed to function ga of MATLAB [18]: the population size was set from 300 to 500, the Elite count changed from 2 (default value) to 50, and the number of Generations changed from 100* NumberOfVariables (default) to 75.
 
 \section{Analysis of the partitioning problem using ESBMC}
+ESBMC pseudocode shows the algorithm with the same restrictions and conditions placed on ILP and GA. Two values must be controlled to obtain the results and to perform the optimization. One is the initial software cost, as defined in Section III.G. The other is the halting condition (code violation) that stops the algorithm.
+
+The ESBMC algorithm starts with the declarations of hardware, software, and communication costs.  also must be defined, as the transposed incidence matrix and the identity matrix, as typically done in MATLAB. Here, the matrices A and b are generated. At that point, the ESBMC algorithm starts to differ from the ILP and GA presented in [5] and [6].
+
+It is possible to tell the ESBMC with which type of values the variables must be tested. Therefore, there is a declaration to populate all the decision variables $ x $ with non-deterministic Boolean values. Those values that change for each test will generate a possible solution and obey the restrictions. If this is achieved, then a feasible solution is found and the ASSUME directive is responsible for ensuring the compliance of constrains (i.e.,$ A.x \leq b $ ).
+
+A loop controls the cost of hardware hint, starting with zero and reaching the maximum value considering the case, where all nodes are partitioned to hardware. To every test performed, the hardware hint is compared to the feasible solution. This is accomplished by an ASSERT statement at the end of the algorithm, a predicate that controls the halt condition (true-false statement). If the predicate is FALSE, then the optimization is finished, i.e., the solution was found. The ASSERT statement tests the objective function, i.e., the hardware cost, and will stop if the hardware cost found is lower than or equal to the optimal solution. However, if ASSERT returns a TRUE condition, i.e., the hardware cost is higher than the optimal solution, then the model-checking algorithm restarts and a new possible solution is generated and tested until the ASSERT generates a FALSE condition. When the FALSE condition happens at verification-time, the execution code is aborted and ESBMC presents the counterexample that caused the condition to be broken. That is the point in which the solution is presented (minimum HW cost).
+
+In the ESBMC algorithm, which is shown below, it is not necessary to add slack variables because the modulus operation is kept, which reduces the number of variables to be solved. 
+
+\begin{lstlisting}
+01. Initialize Variables 
+02. Declare number of nodes and edges
+03. Declare hardware cost of each node as array (h)
+04. Declare software cost of each node as array (s)
+05. Declare communication cost of each edge (c)
+06. Declare the initial software cost of (S0)
+07. Declare transposed incidence matrix graph G (E)
+08. Define the solutions variable (Xi) as Boolean
+09. main {
+10.  for TipH = 0 to Hmax do {
+11.   populate Xi with nondeterministic/test values
+12.   Calculate s(1-x)+c|Ex| and store at variable
+13.   Requirement isured by Assume (Variable <= S0)
+14.   Calculate Hp cost Based on value tested of Xi
+15.   Violation check with Assert(Hp > TipH)
+16.  }
+17. }
+\end{lstlisting}
+
+In the multi-core ESBMC algorithm, the only difference is the fact that the value of $ TipH $ and its range is not declared in the algorithm, as shown in ESBMC Pseudocode. The proposed approach is invoked for each test problem, as follows:
+$ esbmc-parallel <Filename.c> \; <hminvalue> \; <Hmax> $
+
+Where $ <Filename.c> $ is the optimization problem described in ANSI-C format, $  <hminvalue> $ is the minimum (zero to HW-SW partitioning problem) and $ <Hmax> $ is the maximum hardware cost for the specified problem.
+
+Therefore, the algorithm starts  different instances of ESBMC using the different optimization values, in ascending order, for $ Hmax $ in order to find a violation. If all instances finish and no violation is found, then multi-core ESBMC starts new $ N $ instances. When a violation is found, it reports time and hardware cost. If multi-core ESBMC tests all the possibilities for the hardware cost and has not found a violation, then it reports: $ Violation not found $.
+
 \section{Analysis of the partitioning problem using vZ}
 O pseudocódigo abaixo mostra as condições aplicadas em ILP, GA e ESBMC convertida para a ferramenta vZ descrita em [34] e [35]. 
 
@@ -284,8 +363,120 @@ Duas restrições são impostas, a primeira refere-se à soma entre custo de sof
 18.  Print Result
 \end{lstlisting}
 
-\section{Experimental Evaluation}
+Nice team.
 
+\section{Experimental Evaluation}
+ESBMC 1.24 running on a 64-bit Ubuntu 14.04.1 LTS operating system was used. Version 2.0.1 of Boolector SMT-solver [25] (freely available) was used as well. For the ILP and GA formulations, MATLAB R2013a from MathWorks with Parallel Computing Toolbox was used [18]. MATLAB is a dynamically typed high-level language known as the state-of-the-art mathematical software [19] and is widely used by the engineering community [20]. The ESBMC multi-core algorithm was implemented in C++1. A desktop with 24GB of RAM and i7 (8-cores) from Intel with clock of 3.40 GHz was used. Each time was measured 3 times in GA (average taken) and just once in ESBMC and ILP. The reason is that GA times are not so close as ESBMC and ILP. A time out condition (TO) is reached when the running time is longer than 7,200 seconds. A memory out (MO) occurs when the tool reaches 24GB of memory. TABLE I. lists the benchmarks1.
+
+\begin{table}[h]
+\caption {Description of Benchmarks}
+\small
+\sffamily\footnotesize
+\tabulinesep=6pt
+\begin{tabular}[c]{m{1.5cm}m{0.8cm}m{0.8cm}m{3.8cm}}
+  \toprule[1.5pt]
+  \head{Name} & \head{Nodes} & \head{Edges} & \head{Description}\\
+  \midrule
+  
+\verb|CRC32| & \verb|25| & \verb|32| & \rmfamily 32-bit cyclic redundancy check [21]\\
+\hline
+\verb|Patricia| & \verb|21| & \verb|48| & \rmfamily Routine to insert values in Patricia Tree [21]\\
+\hline
+
+\verb|Dijkstra| & \verb|26| & \verb|69| & \rmfamily Computer shortest paths in a graph [21]\\
+\hline
+\verb|Clustering| & \verb|150| & \verb|331| & \rmfamily Image segmentation algorithm in a medical application\\
+\hline
+\verb|RC6| & \verb|329| & \verb|448| & \rmfamily RC6 cryptography graph algorithm\\
+\hline
+\verb|Fuzzy| & \verb|261| & \verb|422| & \rmfamily Clustering algorithm based on fuzzy logic\\
+\hline
+\verb|Mars| & \verb|417| & \verb|600| & \rmfamily MARS cipher from IBM algorithm\\
+ 
+  \bottomrule[1.5pt]
+\end{tabular}
+\end{table}
+
+The vertices in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, and hardware costs represent the occupied area.
+
+The overall performance (TABLE II. ) shows that ILP is the best solution of all techniques, even if we consider that the Fuzzy benchmark reached time out with ILP. Thus, the maximum limit to use ILP is around 329 nodes or less. GA was the only technique that could solve all benchmarks, but the error from the exact solution varied from -37.6\% to 29\%. 
+
+Multi-core ESBMC had a better performance than that of pure ESBMC. The relative speedup obtained ranged from 1.9 to 60.3, which shows a reasonable improvement. Until the number of 150 nodes is reached, the ESBMC technique, mainly Multi-core ESBMC, has shown itself to be a good choice to solve HW-SW partitioning. This is because the exact solution was found and the execution time was mostly closer to ILP (from the same performance to 4.7 times faster). If the complexity of test vectors increases, then pure ESBMC algorithm has the drawback of creating an even more complex problem, because it increases the states created, which controls the hardware cost hint.
+
+\begin{table}[h]
+\caption {Results of the benchmarks}
+\small
+\begin{tabular}[c]{cc|c|c|c|c|c|c|c}
+  \toprule[1.5pt]
+  \head{\begin{turn}{-90}  \end{turn}} &
+  \head{\begin{turn}{-90}  \end{turn}} &
+  \head{\begin{turn}{-90}CRC32\end{turn}} &
+  \head{\begin{turn}{-90}Patricia\end{turn}} &
+  \head{\begin{turn}{-90}Dijkstra\end{turn}} &
+  \head{\begin{turn}{-90}Clustering\end{turn}} &
+  \head{\begin{turn}{-90}RC6\end{turn}} &
+  \head{\begin{turn}{-90}Fuzzy\end{turn}} &
+  \head{\begin{turn}{-90}Mars\end{turn}} \\
+
+  \midrule
+
+\verb| | & \verb|Nodes| & \verb|25| & \verb|21| & \verb|26| & \verb|150| & \verb|329| & \verb|261|  & \verb|417|\\
+\verb| | &\verb|Edges| & \verb|32| & \verb|48| & \verb|69| & \verb|331| & \verb|448| & \verb|442|  & \verb|600|\\
+\verb| | &\verb|S0| & \verb|20| & \verb|10| & \verb|20| & \verb|50| & \verb|600| & \verb|4578|  & \verb|300|\\
+\bottomrule[1.5pt]
+
+%EXACT Solution
+\rowcolor{DarkGray}
+\verb|Exact| & \verb|Hp| & \verb|15| & \verb|47| & \verb|31| & \verb|241| & \verb|692|  & \verb|13820| & \verb|876|\\
+\rowcolor{DarkGray}
+\verb|Solution| & \verb|Sp| & \verb|19| & \verb|4| & \verb|19| & \verb|46| & \verb|533|  & \verb|4231| & \verb|297|\\
+
+
+%vZ
+\verb|vZ| & \verb|T(s)| & \verb|0.2| & \verb|0.3| & \verb|0.6| & \verb|109| & \verb|112|  & \verb|TO| & \verb|TO|\\
+\verb|| & \verb|Hp| & \verb|15| & \verb|47| & \verb|31| & \verb|241| & \verb|241|  & \verb|-| & \verb|-|\\
+\hline
+
+%ILP
+\rowcolor{Gray}
+\verb|ILP| & \verb|T(s)| & \verb|2| & \verb|1| & \verb|2| & \verb|649| & \verb|1806|  & \verb|TO| & \verb|5.42|\\
+\rowcolor{Gray}
+\verb| | & \verb|Hp| & \verb|15| & \verb|47| & \verb|31| & \verb|241| & \verb|692|  & \verb|-| & \verb|876|\\
+\hline
+
+%GA
+\verb|GA| & \verb|T(s)| & \verb|7| & \verb|7| & \verb|9| & \verb|340| & \verb|2050|  & \verb|1.37| & \verb|5000|\\
+\verb| | & \verb|E%| & \verb|13.3| & \verb|0| & \verb|29| & \verb|1.7| & \verb|-6.5|  & \verb|-37.6| & \verb|-27.5|\\
+\hline
+
+%ESBMC
+\rowcolor{Gray}
+\verb|ESBMC| & \verb|T(s)| & \verb|31| & \verb|362| & \verb|292| & \verb|3010| & \verb|TO|  & \verb|MO| & \verb|MO|\\
+\rowcolor{Gray}
+\verb|| & \verb|Hp| & \verb|15| & \verb|47| & \verb|31| & \verb|241| & \verb|-|  & \verb|-| & \verb|-|\\
+\hline
+
+%MultiCore ESBMC
+\verb|ESBMC| & \verb|T(s)| & \verb|2| & \verb|6| & \verb|7| & \verb|1615| & \verb|TO|  & \verb|TO| & \verb|TO|\\
+\verb|MC| & \verb|Hp| & \verb|15| & \verb|47| & \verb|31| & \verb|241| & \verb|-|  & \verb|-| & \verb|-|\\
+\hline
+
+%ESBMC Parallel sequential
+\rowcolor{Gray}
+\verb|ESBMC| & \verb|T(s)| & \verb|4| & \verb|10| & \verb|11| & \verb|2238| & \verb|TO|  & \verb|MO| & \verb|MO|\\
+\rowcolor{Gray}
+\verb|PS| & \verb|Hp| & \verb|15| & \verb|47| & \verb|31| & \verb|241| & \verb|-|  & \verb|-| & \verb|-|\\
+\hline
+
+%ESBMC Parallel Binary
+\verb|ESBMC| & \verb|T(s)| & \verb|6| & \verb|5| & \verb|6| & \verb|207| & \verb|TO|  & \verb|MO| & \verb|MO|\\
+\verb|PB| & \verb|Hp| & \verb|15| & \verb|47| & \verb|38| & \verb|241| & \verb|-|  & \verb|-| & \verb|-|\\
+\bottomrule[1.5pt]
+
+\end{tabular}
+\end{table}
+
+With the RC6 benchmark (329 nodes), ESBMC was unable to present a solution without exceeding the time limit of 7200 seconds. Pure ESBMC had even a worse performance with Fuzzy and Mars, because the execution presented memory out. This is a clear indication that the prune method adopted by the ILP’s search tree solver is still more efficient than that adopted by ESBMC solver.
 
 \section{Related Work}
 Since the second half of the first decade of the 2000s, three main paths have been tracked to improve or to present alternative solutions to the optimization of HW-SW partitioning, i.e., to find the exact solution [2], to use heuristics to speed up performance time [1], and hybrid ones [22].
@@ -303,7 +494,28 @@ If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpl
 
 Finally, there is an issue about 150 nodes problem, since it seems to be the limit of ESBMC. It really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for bigger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the size of the search space. In future work, we will exploit other search strategies in the multi-core ESBMC approach and address specifically more complex types of architectures in the HW-SW partitioning problem, including more than one CPU.
 \section{References}
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+% ---- Bibliography ---- %
+%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{thebibliography}{5}
+\providecommand{\natexlab}[1]{#1}
+\providecommand{\url}[1]{{#1}}
+\providecommand{\urlprefix}{URL }
+\expandafter\ifx\csname urlstyle\endcsname\relax
+  \providecommand{\doi}[1]{DOI~\discretionary{}{}{}#1}\else
+  \providecommand{\doi}{DOI~\discretionary{}{}{}\begingroup
+  \urlstyle{rm}\Url}\fi
+\providecommand{\eprint}[2][]{\url{#2}}
+
+%1
+\bibitem{Jackson1995}
+Michael Jackson, ``{The world and the machine},'' {\em ICSE}, pp. 283--292, 1995.
+
+
+
+
+\end{thebibliography}
 
 \end{document}
 
