--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -116,9 +116,9 @@ In any HW and SW design of complex systems, more time is spent on verification t
 
 In [5] and [6] was shown that it is possible to use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) to perform HW-SW partitioning in embedded systems. The present work extends those studies since there is a substantial improvement in terms of the genetic algorithm and the SMT-based verification method, which has been extended with a multi-core architecture. Multi-core processors have been used in all segments of industry to implement high-performance computing [7]. In particular, hardware platforms, together with multi-processing platforms, have allowed verification algorithms to distribute tasks executions across multiple processors, which generate an increase in performance if compared to single-core solution. However, most verification algorithms still disregard the limitations of the CMOS technology, which limits the increase of the chip’s frequency after it reaches 4 GHz.
 
-\textcolor{Red}{Aqui, nós exploramos a disponibilidade de processadores multi-core, Em particular, são usados métodos baseados em SMT para analise do particionamento de HW-SW, em seguida, compara-se resultados usando PLI (programacao inteira linear), AG (Algoritmos Geneticos) em uma versão multicore, compara-se os resultados da ferramenta vZ da microsoft que se encontra no estado da arte[32], além de uma versão melhorada da busca em HW-SW para processadores multicores.} To the best of our knowledge, this is the first work to use a multi-core SMT-based verification to solve a HW-SW partitioning problem in embedded systems. We implement our ideas with the Efficient SMT-based Bounded Model Checker (ESBMC) tool [14]. As its main contribution, this paper shows that it is possible to take advantage of an SMT-based BMC tool in a multi-core architecture to solve optimization problems.
+\textcolor{Red}{Here, we will explore the explore the availability of multi-core processors, in particular SMT methods are used to analyse the partition of HW-SW, then the results are compared using ILP (integral linear programming), GA (generic algorithms) in a multi-core version, the results will be compared with vZ tool of Microsoft that is in the state of art [32], besides of the improved version of the search by HW-SW to multi-core processors.} To the best of our knowledge, this is the first work to use a multi-core SMT-based verification to solve a HW-SW partitioning problem in embedded systems. We implement our ideas with the Efficient SMT-based Bounded Model Checker (ESBMC) tool [14]. As its main contribution, this paper shows that it is possible to take advantage of an SMT-based BMC tool in a multi-core architecture to solve optimization problems.
 
-\textcolor{Red}{Este artigo está organizado da seguinte forma: a Seção 2 dá um fundo de otimização, otimizacao com a ferramenta vZ, utilizacao da técnica BMC com ESBMC, ESBMC com suporte a multiplos nucelos usando OpenMP, ESBMC Usando técnicas otimas de busca para multiplos nucleos com OpenMP. Seção 3 descreve a modelagem matemática informal e formal. Seção 4 descreve brevemente ILP e GA. O método BMC à base de SMT é apresentado na Seção 5. Seção 6 apresenta o modelo de particionamento usando o vZ. Seção 7 apresenta a avaliação experimental. Seção 8 discute os trabalhos relacionados. Seção 9 apresenta as conclusões e trabalhos futuros.}
+\textcolor{Red}{This article is organized by the following way: the section 2 gives a background of optimization, optimization with vZ, use of BMC technique with ESBMC, multi-cre ESBMC using OpenMP, ESBMC using optimized techniques of search to multiples cores with OpenMP. Section 3 describes the informal and formal mathematical modeling. Section 4 briefly describes th ILP and GA. The BMC method is based in SMT and is presented in section 5. The section 6 presents the paritioning model using vZ. The section 7 presents the experimental evaluation. The Section 8 discuss about the related works. The section 9 is presents the conclusions the future complementary works.}
 
 
 \section{BACKGROUND}
@@ -138,21 +138,21 @@ There is no single method available for solving all optimization problems effici
 In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours running before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, e.g., those used in the GA [9]. The only drawback is that the found solution may not be the global minimum or maximum.
 
 \subsection{\textcolor{Red}{Optimization with Vz}}
-Um solucionador SMT e uma ferramenta com finalidade de verificar a satisfabilidade de formulas baseada em um conjunto de regras SMT. Z3 e um solucionador SMT da Microsoft Research, disponibilizado livremente para a comunidade que integra suporte para uma variedade de teorias. Z3 tras consigo um solucionador DPLL juntamente de uma máquina de correspondencia para quantificadores. Z3 e implementado em C++.
-vZ e uma das ferramentas implementadas no solucionador Z3, a funcao base desta ferramenta e otimizar objetivos dentro do contexto logico das restricoes, este se destaca pelas funcoes que dao a possibilidade de formular criterios de otimizacao. 
-vZ inclui uma versao incremental de MaxRes para MaxSAT e um Simplex para solucionar numeros sem padrao definido, em seu nucleo MaxSat e responsavel pelas restricoes enquanto OptSMT tem como funcao otimizar objetivos de aritmetica linear.
-Dentre todos os avancos do Z3 usando vZ destaca-se as funcoes: maximize, minimize and assert-soft.
+A SMT solver is a tool that verifies formula's satisfiability based in a set of rules SMT. Z3 is a SMT solver made by Microsoft Research, freely available to the community, that supports a variety of theories. Z3 brings a solver DPLL together with a correspondence machine for quantifiers. Z3 is implemented in C++.
+vZ is one of the tools implemented on the Z3 solver, it's base function is to optimize objectives within the logic context of constraints, it stands for the functions that make possible formulate optimized criteria.
+vZ includes an incremental version of MaxRes to MaxSAT and a Simplex to solve numbers without defined patterns, in it's core MaxSAT is responsible to the restrictions while OptSMT optimize the linear arithmetic objectives.
+Among all progress of Z3 using vZ the functions hightlights: maximize, minimize e assert-soft.
 
 \begin{itemize}
 \item{\textbf{maximize(T)}
-esta instrucao diz ao solucionador que a variavel T devera ser maximizada, e possível maximizar valores reais, inteiros e vetores de bit.}
+this instruction informs to the solver that a given variable T should be maximized, if possible maximize real, integer and bit vector values.}
 \item{\textbf{minimize(T)}
-esta instrucao diz ao solucionador que a variavel T devera ser minimizada, os tipos aceitos pelo minimize e similar ao maximize.}
+this instruction informs the solver that a given variable T should be minimized, the accepted types are the same as maximize.}
 \item{\textbf{Assert-Soft F :weight n}
-a instrucao Assert-soft e uma restricao sobre F, e possível adicionar um peso n, o padrão e 1.} 
+the instruction Asser-soft is a restriction to F, if possible add a weight n, the default is 1.}
 \end{itemize}
 
-Vamos otimizar (K+W), com restrições em (K \textless 2) e (W-K \textless 1), o resultado da otimização descrita no código abaixo é 2, o modelo gerado pelo vZ mostra que K = 1 e W =1.
+Lets optimize (K+W), with the restrictions in (K \textless 2) and (W-K \textless 1), the expected result of the optimization described in the code below is 2. the model generated by vZ shows that K = 1 and W = 1.
 
 \begin{lstlisting}
 1. (declare-const K Int) 
@@ -164,7 +164,7 @@ Vamos otimizar (K+W), com restrições em (K \textless 2) e (W-K \textless 1), o
 \end{lstlisting}
 
 
-De acordo com [34] a arquitetura do vZ pode ser descrita na imagem XXX, inicialmente as formulas e os objetivos SMT sao reescritos para variaveis do tipo 0-1, posteriormente os objetivos sao convertidos para problemas MaxSAT, se houver muitos objetivos vZ invoca MaxSAT ou OptSMT. Para restricoes sob valores reais usando “Box”, vZ combina todas a aritmetica linear e faz chamada para OptSMT. Quando usamos “soft constrains” no modo “lexicographic” vZ invoca MaxSAT.
+Accordingly to [34] the architecture of vZ can be described on the image XXX, initially the formulas and the SMT objectives are converted to problems MaxSAT, if there are many objectives, vZ invokes MaxSAT or OptSAT. To restrictions in real values using “Box”, vZ combines all linear arithmetic and calls the OptSMT. When we use “soft constrains” in the mode “lexicographic” vZ invokes MaxSAT.
 \begin{figure}[ht]
 	\centering
   \includegraphics[width=0.49\textwidth, height=95px]{Image/vzArch.png} 
@@ -335,14 +335,15 @@ Where $ <Filename.c> $ is the optimization problem described in ANSI-C format, $
 Therefore, the algorithm starts  different instances of ESBMC using the different optimization values, in ascending order, for $ Hmax $ in order to find a violation. If all instances finish and no violation is found, then multi-core ESBMC starts new $ N $ instances. When a violation is found, it reports time and hardware cost. If multi-core ESBMC tests all the possibilities for the hardware cost and has not found a violation, then it reports: $ Violation not found $.
 
 \section{\textcolor{Red}{Analysis of the partitioning problem using vZ}}
-O pseudocódigo abaixo mostra as condições aplicadas em ILP, GA e ESBMC convertida para a ferramenta vZ descrita em [34] e [35]. 
+The code below shows the conditions applied on ILP, GA and ESBMC converted to the vZ tool described in [34] and [35]. 
 
-Um contexto do vZ é criado, este recebe as restrições e devolve um modelo caso exista uma solução para o conjunto de restrições.  Posteriormente são declarados a quantidade de nós, quantidade de arestas, o valor de , o custo de hardware, custo de software, custo de comunicação, e a matriz de incidência E.   
+A vZ context is created, it receives the restrictions and returns the model if a solution to the set of rectictions exists. Later the number of nodes are declared, number of edges, the number of, the cost of hardware, cost of software, cost of communication and the incidence matrix E.
 
-As declarações aritméticas descritas nas linhas 10, 11,12 e 13 do pseudocódigo é uma transcrição da formula $ S(1-x) + C|Ex| \leq S{0} $ descrita na seção III.B, é referente ao custo de software (SF). Observe que na linha 11 uma variável temporária chamada TMP é criada para representar $C|Ex|$  , é aplicado então um produto entre o valor absoluto de TMP com o valor do vetor C declarado na linha 07, logo, gera-se o resultado para o custo de comunicação (CMC). 
-Na linha 13, a declaração Fobj (Função objetivo) é um produto entre o custo de hardware com um vector que contém valores 0 ou 1. Fobj deve ser minimizado para alcançarmos a melhor solução para o hardware.
+The arithmetic declarations described on the lines 10, 11,12 e 13 of the code are a transcription of the formula $ S(1-x) + C|Ex| \leq S{0} $ described on the section III.B, refers to the cost of software (SF). Note that in the line 11 a temporary variable called TMP is created to represent $C|Ex|$  , then the product between the absolute value of TMP and the vector C declared in the line 07, then the result of the cost of communication is generated (CMC). 
 
-Duas restrições são impostas, a primeira refere-se à soma entre custo de software com o custo de comunicação, a resultante da soma deve ser menor do que , a segunda restrição diz ao vZ que ele deverá minimizar Fobj. O modelo então é checado, uma vez que há uma solução que obedeça às restrições, o valor da função objetiva é impressa. 
+In the line 13, the Fobj (Objective Function) is declared. It is a product between the cost of hardware with the vector that contains the values 0 and 1. Fobj should be minimized to get the best hardware solution .
+
+Two restrictions are imposed, the first refers to the sum between the cost of software and communication, the result of the sum should be less than , the second restriction tells to vZ that Fobj should be minimized. So the model is checked, once a solution that complains the restrictions, the value of the Fobj is printed.
 
 \begin{lstlisting}
 01.#Init Values
